# Pet-WorkBuddy

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.bat  dev.bat  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  update.bat
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/electron/: main.cjs  preload.cjs
apps/desktop/public/pet-packs/: manifest.json
apps/desktop/src/: i18n.ts  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: app_log.rs  commands.rs  computer_control.rs  custom_pets.rs  main.rs  shortcuts.rs  single_instance.rs  startup.rs  tray.rs  window.rs
apps/desktop/src/app/: App.tsx  routes.tsx
apps/desktop/src/chat/: AttachmentProcessor.ts  ChatController.ts  ChatStore.ts  MarkdownDisplay.tsx  MessageList.tsx  PromptBox.tsx
apps/desktop/src/components/: ChatWindow.tsx  ComputerTaskPanel.tsx  PetWindow.tsx  SettingsWindow.tsx
apps/desktop/src/computer/: ComputerAgent.ts  ComputerTask.ts
apps/desktop/src/config/: defaultConfig.ts  schema.ts
apps/desktop/src/pet/: CustomPetManager.ts  PetActionPlayer.ts  (+4 more)
docs/: action-system.md  controlled-learning.md  development.md  pet-pack-spec.md  provider-config.md  shortcut-config.md
pet-packs/: manifest.json
pet-packs/kenney-cat/: pet.json
pet-packs/kenney-chick/: pet.json
pet-packs/kenney-koala/: pet.json
pet-packs/kenney-panda/: pet.json
pet-packs/kenney-penguin/: pet.json
scripts/: build.ps1  clean.ps1  dev.ps1  run-tauri.mjs  update.ps1  update.sh
services/update-server/: Dockerfile  README.md  docker-compose.yml  server.py
services/update-server/data/: latest.json
(+32 files in other folders)
