[package]
name = "workbuddy"
version = "0.1.0"
description = "Open-source AI desktop pet"
authors = ["hillmanpick"]
license = "MIT"
repository = "https://github.com/hillmanpick/Pet-WorkBuddy"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
keyring = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6", features = ["api-all", "global-shortcut", "system-tray"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

