[package]
name = "workbuddy"
version = "0.1.3"
description = "Open-source AI desktop pet"
authors = ["hillmanpick"]
license = "MIT"
repository = "https://github.com/hillmanpick/Pet-WorkBuddy"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
arboard = "3.4"
enigo = "0.2"
encoding_rs = "0.8"
keyring = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6", features = ["api-all", "global-shortcut", "system-tray"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
